--- a/sphinx2/source/_templates/index.html
+++ b/sphinx2/source/_templates/index.html
@@ -24,7 +24,7 @@
   <table class="contentstable" align="center" style="margin-left: 30px">
     <tr>
       <td width="50%">
-        <p class="biglink"><a class="biglink" href="{{ pathto("user/user") }}">User's manual</a><br/>
+        <p class="biglink"><a class="biglink" href="{{ pathto("user/index") }}">User's manual</a><br/>
            <span class="linkdescr">basic usage of Woo, including installation</span></p>
         <p class="biglink"><a class="biglink" href="{{ pathto("cases/index") }}">Case studies</a><br/>
            <span class="linkdescr">larger studies done with Woo</span></p>
