--- a/sphinx2/source/_templates/index.html
+++ b/sphinx2/source/_templates/index.html
@@ -54,7 +54,7 @@
       </td>
     </tr>
   </table>
-  <h2 name="gallery"><a href="{{ pathto("gallery") }}">Gallery</a></h2>
+  <h2 name="gallery"><a href="{{ pathto("gallery/index") }}">Gallery</a></h2>
   <table class="contentstable" align="center" style="margin-left:30px; vertical-align: middle;">
   	<tr>
 		<td width="50%">
