Update API in docs to 10101

--- a/sphinx2/source/_templates/index.html
+++ b/sphinx2/source/_templates/index.html
@@ -23,24 +23,26 @@
   <table class="contentstable" align="center" style="margin-left: 30px">
     <tr>
       <td width="50%">
+        <p class="biglink"><a class="biglink" href="{{ pathto("tutorial/index") }}">Tutorial</a><br/>
+           <span class="linkdescr">steps to write your own simulations
         <p class="biglink"><a class="biglink" href="{{ pathto("user/index") }}">User's manual</a><br/>
            <span class="linkdescr">basic usage of Woo, including installation</span></p>
-        <p class="biglink"><a class="biglink" href="{{ pathto("cases/index") }}">Case studies</a><br/>
-           <span class="linkdescr">larger studies done with Woo</span></p>
         <p class="biglink"><a class="biglink" href="{{ pathto("theory/index") }}">Theory</a><br/>
            <span class="linkdescr">various physical aspects of simulations</span></p>
       </td>
       <td width="50%">
-        <p class="biglink"><a class="biglink" href="{{ pathto("tutorial/index") }}">Tutorial</a><br/>
-           <span class="linkdescr">steps to write your own simulations
         <p class="biglink"><a class="biglink" href="{{ pathto("wooMods") }}">Woo modules</a><br/>
            <span class="linkdescr">reference for all Python internals</span></p>
         <p class="biglink"><a class="biglink" href="{{ pathto("prog/index") }}">Programming manual</a><br/>
            <span class="linkdescr">guide to diving in C++</span></p>
+        <p class="biglink"><a class="biglink" href="{{ pathto("api") }}">API Changes</a><br/>
+           <span class="linkdescr">keeping up with changes</span></p>
       </td>
     </tr>
     <tr>
       <td width="50%">
+        <p class="biglink"><a class="biglink" href="{{ pathto("cases/index") }}">Case studies</a><br/>
+           <span class="linkdescr">larger studies done with Woo</span></p>
         <p class="biglink"><a class="biglink" href="{{ pathto("references") }}">References</a><br/>
            <span class="linkdescr">articles cited in the documentation</span></p>
       </td>
